projetos/local/nexus-backoffice-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-backoffice-webapp-route
  namespace: nexus-backoffice-webapp
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: tech-https
  hostnames:
  - "backoffice.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-backoffice-webapp-service
      port: 80
